manifests/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acm-argo-app
  labels:
    app: acm-argo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: acm-argo-app
  template:
    metadata:
      labels:
        app: acm-argo-app
    spec:
      containers:
      - name: acm-argo-app
        image: nicolasquiceno/acm-argo-app:0.0.5
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 0.5
            memory: "1Gi"
          limits:
            cpu: 1
            memory: "2Gi"
