manifests/app/base/service_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: acm-argo-app
spec:
  selector:
    app: acm-argo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
