manifests/app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acm-argo-app
  # namespace: default
spec:
  # host: acm-argo-app.roks-on-prem-01b6979992f145efa01cf3e6bcc80df2-0000.upi.containers.appdomain.cloud
  port:
    targetPort: 8080
  to:
    kind: Service
    name: acm-argo-app
